--- a/about-us.html
+++ b/about-us.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230405174200"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230406154335"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405174200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230406154335">
 
 
 
@@ -307,6 +307,12 @@
       </div>
     </div>
   </div>
+  <div class="facts__bg">
+    <picture>
+      <source srcset="img/about-us/facts-bg_mob.png" media="(max-width: 992px)">
+      <img src="img/about-us/facts-bg.png" alt="" loading="lazy" class="img-full">
+    </picture>
+  </div>
 </section>
     <section class="members">
   <div class="members__container">
@@ -454,9 +460,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230405174200"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230406154335"></script>
 
-<script src="js/app.min.js?_v=20230405174200"></script>
+<script src="js/app.min.js?_v=20230406154335"></script>
  
 </body>
 
