--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230405174200"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230406154335"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405174200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230406154335">
 
 
 
@@ -530,6 +530,9 @@
       </div>
     </div>
   </div>
+  <div class="techno__bg">
+      <img src="img/index/whyus-bg.png" alt="" loading="lazy" class="img-full">
+  </div>
 </section>
     <sectiom class="references">
   <div class="references__container">
@@ -632,6 +635,99 @@
     <img src="img/index/industries-bg.png " alt="" loading="lazy" class="img-full">
   </div>
 </section>
+    <section class="template template_main">
+  <div class="template__container">
+    <h2 class="template__title mtitle">Blog and News</h2>
+    <div class="news">
+      <div class="news__item">
+        <div class="news-item__picture">
+          <img src="img/blog/news-item1.png" alt="" loading="lazy" class="img-full">
+        </div>
+        <div class="news-item__body">
+          <h4 class="news-item__title">All you need to know about team extention </h4>
+          <p class="news-item__p">Sometimes you just don’t have the time to manage a project yourself. In our project model</p>
+          <div class="news-item__info">
+            <div class="news-item__info-body">
+              <span>Published on:</span>
+              <p>12/03/23</p>
+            </div>
+            <div class="news-item__info-body">
+              <span>By:</span>
+              <img src="img/blog/author-img.png" alt="" loading="lazy">
+              <p>Taylor Smith</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="news__item">
+        <div class="news-item__picture">
+          <img src="img/blog/news-item2.png" alt="" loading="lazy" class="img-full">
+        </div>
+        <div class="news-item__body">
+          <h4 class="news-item__title">All you need to know about team extention </h4>
+          <p class="news-item__p">Sometimes you just don’t have the time to manage a project yourself. In our project model</p>
+          <div class="news-item__info">
+            <div class="news-item__info-body">
+              <span>Published on:</span>
+              <p>12/03/23</p>
+            </div>
+            <div class="news-item__info-body">
+              <span>By:</span>
+              <img src="img/blog/author-img.png" alt="" loading="lazy">
+              <p>Taylor Smith</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="news__item">
+        <div class="news-item__picture">
+          <img src="img/blog/news-item3.png" alt="" loading="lazy" class="img-full">
+        </div>
+        <div class="news-item__body">
+          <h4 class="news-item__title">All you need to know about team extention </h4>
+          <p class="news-item__p">Sometimes you just don’t have the time to manage a project yourself. In our project model</p>
+          <div class="news-item__info">
+            <div class="news-item__info-body">
+              <span>Published on:</span>
+              <p>12/03/23</p>
+            </div>
+            <div class="news-item__info-body">
+              <span>By:</span>
+              <img src="img/blog/author-img.png" alt="" loading="lazy">
+              <p>Taylor Smith</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="news__item">
+        <div class="news-item__picture">
+          <img src="img/blog/news-item4.png" alt="" loading="lazy" class="img-full">
+        </div>
+        <div class="news-item__body">
+          <h4 class="news-item__title">All you need to know about team extention </h4>
+          <p class="news-item__p">Sometimes you just don’t have the time to manage a project yourself. In our project model</p>
+          <div class="news-item__info">
+            <div class="news-item__info-body">
+              <span>Published on:</span>
+              <p>12/03/23</p>
+            </div>
+            <div class="news-item__info-body">
+              <span>By:</span>
+              <img src="img/blog/author-img.png" alt="" loading="lazy">
+              <p>Taylor Smith</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="template__btn">
+      <a href="blog.html" class="btn btn_dark">View more</a>
+    </div>
+  </div>
+  <div class="template__bg">
+    <img src="img/base/template-bg.svg" alt="" loading="lazy" class="img-full">
+  </div>
+</section>
     <section class="question">
   <div class="question__container">
     <h2 class="question__title smtitle">Have a question?</h2>
@@ -694,9 +790,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230405174200"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230406154335"></script>
 
-<script src="js/app.min.js?_v=20230405174200"></script>
+<script src="js/app.min.js?_v=20230406154335"></script>
  
 </body>
 
