--- a/recruitment-and-relocation-services.html
+++ b/recruitment-and-relocation-services.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230405174200"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230406154335"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405174200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230406154335">
 
 
 
@@ -136,6 +136,96 @@
       Don’t let your IT vacancies, and lack of local talent continue to delay your engineering projects. Use our expertise as an IT staff augmentation company. We will find suitable software developers and IT specialists for you!</p>
   </div>
 </section>
+    <section class="facts facts_rrs">
+  <div class="facts__container">
+    <div class="facts__body">
+      <div class="facts__item">
+        <div class="facts-item__icon">
+          <img src="img/recruitment-and-relocation-services/facts-item1.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <div>
+          <h4 class="facts-item__title">BUILD YOUR PROFILE</h4>
+          <p class="facts-item__p">What type of person do you need to add to your augmented team?</p>
+        </div>
+      </div>
+      <div class="facts__item">
+        <div class="facts-item__icon">
+          <img src="img/recruitment-and-relocation-services/facts-item2.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <div>
+          <h4 class="facts-item__title">SOURCE CANDIDATES</h4>
+          <p class="facts-item__p">As an IT staff augmentation company our IT recruiters will find suitable engineers to join your team based on your specifications.</p>
+        </div>
+      </div>
+      <div class="facts__item">
+        <div class="facts-item__icon">
+          <img src="img/recruitment-and-relocation-services/facts-item3.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <div>
+          <h4 class="facts-item__title">GET TO KNOW THE CANDIDATES</h4>
+          <p class="facts-item__p">We want you involved and its very important that you get to know the candidates to ensure you have the right chemistry. We work with you to make that process smooth.</p>
+        </div>
+      </div>
+      <div class="facts__item">
+        <div class="facts-item__icon">
+          <img src="img/recruitment-and-relocation-services/facts-item4.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <div>
+          <h4 class="facts-item__title">RELOCATION</h4>
+          <p class="facts-item__p">We work with you to take care of everything from A to Z. the engineer will soon join your team and become a fully integrated part of your local team.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="facts__bg">
+    <picture>
+      <source srcset="img/about-us/facts-bg_mob.png" media="(max-width: 992px)">
+      <img src="img/about-us/facts-bg.png" alt="" loading="lazy" class="img-full">
+    </picture>
+  </div>
+</section>
+    <section class="it it_vt it_rrs">
+  <div class="it__container">
+    <h2 class="it__title mtitle">Why should you br partnering with us?</h2>
+    <div class="it__industries">
+      <div class="industries__item">
+        <div class="industries-item__icon">
+          <img src="img/recruitment-and-relocation-services/ind-item1.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <h4 class="industries-item__title">Scale development teams</h4>
+        <p class="industries-item__p">Our IT staff augmentation model ensures that our clients can expand their development capabilities in week.</p>
+      </div>
+      <div class="industries__item">
+        <div class="industries-item__icon">
+          <img src="img/recruitment-and-relocation-services/ind-item2.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <h4 class="industries-item__title">Maintain control over processes</h4>
+        <p class="industries-item__p">Using IT staff augmentation services implies that the client will work directly with the engineers on their team. </p>
+      </div>
+      <div class="industries__item">
+        <div class="industries-item__icon">
+          <img src="img/recruitment-and-relocation-services/ind-item3.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <h4 class="industries-item__title">Streamline and stabilize budgets</h4>
+        <p class="industries-item__p">Cost consistency is important. With our model we have a straightforward approach to pricing.</p>
+      </div>
+      <div class="industries__item">
+        <div class="industries-item__icon">
+          <img src="img/recruitment-and-relocation-services/ind-item4.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <h4 class="industries-item__title">Streamline and stabilize budgets</h4>
+        <p class="industries-item__p">Cost consistency is important. With our model we have a straightforward approach to pricing.</p>
+      </div>
+      <div class="industries__item">
+        <div class="industries-item__icon">
+          <img src="img/recruitment-and-relocation-services/ind-item5.svg" alt="" loading="lazy" class="img-full">
+        </div>
+        <h4 class="industries-item__title">Streamline and stabilize budgets</h4>
+        <p class="industries-item__p">Cost consistency is important. With our model we have a straightforward approach to pricing.</p>
+      </div>
+    </div>
+  </div>
+</section>
     <section class="question">
   <div class="question__container">
     <h2 class="question__title smtitle">Have a question?</h2>
@@ -198,9 +288,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230405174200"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230406154335"></script>
 
-<script src="js/app.min.js?_v=20230405174200"></script>
+<script src="js/app.min.js?_v=20230406154335"></script>
  
 </body>
 
