--- a/career.html
+++ b/career.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230406154335"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230406172315"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230406154335">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230406172315">
 
 
 
@@ -81,7 +81,7 @@
       <a href="#">References</a>
     </li>
     <li class="menu-item">
-      <a href="#">Technologies</a>
+      <a href="technologies.html">Technologies</a>
     </li>
     <li class="menu-item">
       <a href="blog.html">Blog</a>
@@ -906,9 +906,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230406154335"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230406172315"></script>
 
-<script src="js/app.min.js?_v=20230406154335"></script>
+<script src="js/app.min.js?_v=20230406172315"></script>
  
 </body>
 
